@@ -1,0 +1,15 @@
+[b]Pretty URLs Extras[/b]
+
+This package will add a few officially supported but non-essential filters to Pretty URLs. You can turn these filters on in the settings page.
+
+Filters installed:
+[list]
+[li]A redirection patch for the SEO4SMF mod[/li]
+[li]Pretty URLs for Tiny Portal's articles[/li]
+[/list]
+
+[hr]
+
+Version 0.9
+Copyright (c) 2006-2008, Dannii Willis
+[url=http://code.google.com/p/prettyurls]Pretty URLs project home[/url]
